added framerate control, refactored to have separate view class, and classes for game controller and pools

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.vanjav.tidepool.MainActivity">
 
-    <com.vanjav.tidepool.Environment
+    <com.vanjav.tidepool.TidepoolView
         android:id="@+id/environment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
