added fish and basic swimming

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorSandDark">#b19968</color>
     <color name="colorWater">#69d2ff</color>
     <color name="colorItem">#ff8f87</color>
+    <color name="colorFish">#ffb143</color>
 </resources>
